force-app/main/default/objects/VCC_Case_Metrics__c/VCC_Case_Metrics__c.object-meta.xml
<CustomObject>
    <description>An extension of the Case object to track metrics for reporting purposes.</description>
    <label>Case Metrics</label>
    <nameField>
        <displayFormat>CM-{0000}</displayFormat>
        <label>Case Metrics Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Case Metrics</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>