force-app/main/default/objects/VCC_Case_Metrics__c/fields/VCC_Appointment_Comments__c.field-meta.xml
<CustomField>
    <fullName>VCC_Appointment_Comments__c</fullName>
    <description>This field is used to capture the Comments of the Appointment when Canceled or Scheduled</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Appointment Comments</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>