force-app/main/default/objects/VCC_Case_Metrics__c/fields/VCC_Appt_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>VCC_Appt_Due_Date__c</fullName>
    <description>Calculates the due date for an appointment to be scheduled by adding the hours from the follow up appointment recommendation to the date the case was created. This is for reporting purposes.</description>
    <formula>IF(
 VCC_Case__r.Case_Record_Type_Name__c = &quot;VCC_Administrative&quot;,
 VCC_Case__r.CreatedDate  +  (VCC_Parent_Case_Follow_Up_Appt_Needed_Hr__c  / 24),
 IF(
 VCC_Case__r.Case_Record_Type_Name__c = &quot;VCC_Vitrual_Clinic_Visit&quot;,
 VCC_Case__r.Parent.CreatedDate + (VCC_Parent_Case_Follow_Up_Appt_Needed_Hr__c  / 24),
 NULL
 )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Appt Due Date</label>
    <type>DateTime</type>
</CustomField>