force-app/main/default/objects/VCC_Case_Metrics__c/fields/VCC_Canceled_By__c.field-meta.xml
<CustomField>
    <fullName>VCC_Canceled_By__c</fullName>
    <description>This field is used to capture who Canceled the Appointment</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Canceled By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>