force-app/main/default/objects/VCC_Case_Metrics__c/fields/VCC_Canceled_Date__c.field-meta.xml
<CustomField>
    <fullName>VCC_Canceled_Date__c</fullName>
    <description>This field is used to capture the Canceled Date of the Appointment</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Canceled Date</label>
    <type>DateTime</type>
</CustomField>