force-app/main/default/objects/VCC_Case_Metrics__c/fields/VCC_Case__c.field-meta.xml
<CustomField>
    <fullName>VCC_Case__c</fullName>
    <description>The parent case of the Case Metrics record.</description>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Case Metrics</relationshipLabel>
    <relationshipName>Case_Metrics</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>