force-app/main/default/objects/VCC_Case_Metrics__c/fields/VCC_Clinic__c.field-meta.xml
<CustomField>
    <fullName>VCC_Clinic__c</fullName>
    <description>Captures Clinic info from the case</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Clinic</label>
    <length>255</length>
    <type>Text</type>
</CustomField>