force-app/main/default/objects/VCC_Case_Metrics__c/fields/VCC_Duration_of_Appointment__c.field-meta.xml
<CustomField>
    <fullName>VCC_Duration_of_Appointment__c</fullName>
    <description>This field is used to capture the Duration of the Appointment, in minutes, when Canceled or Scheduled</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Duration of Appointment (Minutes)</label>
    <length>50</length>
    <type>Text</type>
</CustomField>