force-app/main/default/objects/VCC_Case_Metrics__c/fields/VCC_Facility_For_Appointment__c.field-meta.xml
<CustomField>
    <fullName>VCC_Facility_For_Appointment__c</fullName>
    <description>This field is used to capture the Facility of the Appointment when Canceled or Scheduled</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Facility For Appointment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>