force-app/main/default/objects/VCC_Case_Metrics__c/fields/VCC_Is_Case_Assigned_to_My_VISN__c.field-meta.xml
<CustomField>
    <fullName>VCC_Is_Case_Assigned_to_My_VISN__c</fullName>
    <description>Returns true of false if the case is assigned to the user&apos;s VISN.  This takes into account if the VISN is assigned to a queue.</description>
    <formula>IF(VCC_VISN__c = $User.Division ,TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Case Assigned to My VISN</label>
    <type>Checkbox</type>
</CustomField>