force-app/main/default/objects/VCC_Case_Metrics__c/fields/VCC_Last_4_SSN__c.field-meta.xml
<CustomField>
    <fullName>VCC_Last_4_SSN__c</fullName>
    <description>Last 4 digits of SSN</description>
    <formula>VCC_Case__r.Account.SSN_Last_4_Digits__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last 4 SSN</label>
    <type>Text</type>
</CustomField>