force-app/main/default/objects/VCC_Case_Metrics__c/fields/VCC_Location__c.field-meta.xml
<CustomField>
    <fullName>VCC_Location__c</fullName>
    <description>Captures the Location from the Clinic</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>