force-app/main/default/objects/VCC_Case_Metrics__c/fields/VCC_Stop_Code__c.field-meta.xml
<CustomField>
    <fullName>VCC_Stop_Code__c</fullName>
    <description>Captures the Clinic Stop Code Number</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Three digit stop code number assigned to specific location. Each stop code number represents a type of care or Service/Specialty (clinics only).</inlineHelpText>
    <label>Stop Code #</label>
    <length>100</length>
    <type>Text</type>
</CustomField>