force-app/main/default/objects/VCC_Case_Metrics__c/fields/VCC_Time_From_Appt_Made_to_Appt_Date__c.field-meta.xml
<CustomField>
    <fullName>VCC_Time_From_Appt_Made_to_Appt_Date__c</fullName>
    <description>Hours elapsed from Appointment Made Date/Time to Appointment Date/Time</description>
    <formula>(VCC_Scheduled_Start__c - VCC_Appointment_Made_Date_Time__c) * 24</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Time From Appt Made to Appt Date (Hrs)</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>