force-app/main/default/objects/VCC_Case_Metrics__c/fields/VCC_VISN__c.field-meta.xml
<CustomField>
    <fullName>VCC_VISN__c</fullName>
    <description>This field holds the VISN of the parent Case whether the Case owner is a User or a Queue. This is assigned in the following flows: VCC_Assign_Case_to_Me, VCC_Case_Subflow_Follow_Up, VCC_Create_Related_Case</description>
    <encryptionScheme>None</encryptionScheme>
    <label>VISN</label>
    <length>10</length>
    <type>Text</type>
</CustomField>