force-app/main/default/objects/VCC_Case_Metrics__c/fields/VCC_VISN_For_Appointment__c.field-meta.xml
<CustomField>
    <fullName>VCC_VISN_For_Appointment__c</fullName>
    <description>This field is used to capture the VISN of the Appointment when Canceled or Scheduled</description>
    <encryptionScheme>None</encryptionScheme>
    <label>VISN For Appointment</label>
    <length>10</length>
    <type>Text</type>
</CustomField>